Put back shop preview, fixed alignment, handleOnClick not yet fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 html {
   margin: 0;
   padding: 0;
-  background-color: #f8f0dd;
+  background-color: #e3d5c8;
   scroll-behavior: smooth;
 }
 
